feature(message): get current user initial message api
